--- a/TinDog Start Here/index.html
+++ b/TinDog Start Here/index.html
@@ -4,55 +4,62 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+
+<!--  google fonts css-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+
+<!--  bootstrap cdn-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+
+<!--  css stylesheet-->
   <link rel="stylesheet" href="css/styles.css">
+</head>
+
 
 <body>
 
   <section id="title">
+      <div class="container-fluid">
+           <!-- Nav Bar -->
 
-    <!-- Nav Bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="">tindog</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Downlaod</a>
+                </li>
+            </ul>
+          </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="">tindog</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Downlaod</a>
-            </li>
-        </ul>
+        </nav>
+
+
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-6 col-md-12">
+              <h1>Meet new and interesting dogs nearby.</h1>
+              <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
+              <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <img src="images/iphone6.png" alt="iphone-mockup">
+            </div>
+        </div>
+
       </div>
-
-</nav>
-
-
-    <!-- Title -->
-    <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
-        </div>
-        <div class="col-lg-6 col-md-12">
-          <img src="images/iphone6.png" alt="iphone-mockup">
-        </div>
-    </div>
-
-
   </section>
 
 
@@ -152,10 +159,13 @@
 
   </footer>
 
+<!--  Bootstrap scripts-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+<!--font awesome scripts-->
+  <script src="https://kit.fontawesome.com/75165f36e7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
